kubernetes/apps/immich-lightroom/immich-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich-lightroom
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:release
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 4Gi
          volumeMounts:
            - name: upload
              mountPath: /usr/src/app/upload
            - name: raw
              mountPath: /IMPORT
              readOnly: true
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: immich-upload-pvc
        - name: raw
          persistentVolumeClaim:
            claimName: immich-raw-pvc
