kubernetes/apps/immich-lightroom/immich-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich-lightroom
spec:
  selector:
    app: immich-server
  ports:
    - port: 2283
      targetPort: 2283
