kubernetes/apps/immich-lightroom/immich-server/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-server
  namespace: immich-lightroom
spec:
  podSelector:
    matchLabels:
      app: immich-server
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 2283
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
